--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,13 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    // firebase core
     implementation 'com.google.firebase:firebase-core:16.0.1'
+    // firebase auth
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
+    // firebase storage
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
 
